versioned_docs/version-2025.2.2/professor/mario_eduardo_de_barros_gomes_nunes_da_silva.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Mario Eduardo de Barros Gomes Nunes da Silva",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Acionamentos Elétricos (PPC2020) - 2309",
          "size": 4,
          "teachers": [
            "Wylliam Salviano Gongora",
            "Mario Eduardo de Barros Gomes Nunes da Silva"
          ],
          "classroom": "laboratorio_de_maquinas_e_acionamentos_eletricos_b4",
          "students": [
            "ELE2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Manutenção Industrial - 351",
          "size": 2,
          "teachers": [
            "Darlan Roque Dapieve",
            "Mario Eduardo de Barros Gomes Nunes da Silva"
          ],
          "classroom": "Sala 13-2",
          "students": [
            "ELM2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Manutenção Elétrica Industrial - 2311",
          "size": 2,
          "teachers": [
            "Mario Eduardo de Barros Gomes Nunes da Silva",
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "sala_11-2",
          "students": [
            "ELE2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
{
          "subject": "Máquinas e Acionamentos - 1575",
          "size": 3,
          "teachers": [
            "Wylliam Salviano Gongora",
            "Mario Eduardo de Barros Gomes Nunes da Silva"
          ],
          "classroom": "laboratorio_de_maquinas_e_acionamentos_eletricos_b4",
          "students": [
            "EIN2023"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
    
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Sistemas Digitais - 688",
          "size": 4,
          "teachers": [
            "Jair Fajardo Junior",
            "Mario Eduardo de Barros Gomes Nunes da Silva"
          ],
          "classroom": "sala_12-2",
          "students": [
            "ELE2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
    {
          "subject": "Sistemas Digitais - 342",
          "size": 4,
          "teachers": [
            "Jair Fajardo Junior",
            "Mario Eduardo de Barros Gomes Nunes da Silva"
          ],
          "classroom": "sala_14-2",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }

      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Mario Eduardo de Barros Gomes Nunes da Silva

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
